--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           </div>
         </div>
         <div class="hero-media">
-          <div class="hero-illustration"><img src="assets/img.jpg" alt="Praneshwar Govind Das" width="300" height="360"></div>
+          <div class="hero-illustration"><img src="img.jpg" alt="Praneshwar Govind Das" width="300" height="360"></div>
         </div>
       </div>
     </section>
@@ -196,4 +196,5 @@
 
   <script src="script.js"></script>
 </body>
+
 </html>
